--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,65 +1,17 @@
-* {
-    box-sizing: border-box;
-}
-
-body {
-    font-family: monospace;
-}
-
-.contenedor {
-    width: 960px;
-    margin: 0 auto;
-}
-
-.menu {
-    width: 960px;
-    padding: 10px;
-    border-bottom: 1px solid gray
-}
-
-.logo {
-    font-size: 24px;
-    font-weight: bold;
-    text-transform: uppercase;
-    display: inline-block;
-}
-
-.nav {
-    display: inline-block;
-    width: 840px;
-    text-align: right;
-}
-
-
-
-.nav ul li a {
-    text-decoration: none;
-    text-transform: uppercase;
-}
-
-.input-menu {
-    border-radius: 30px;
-}
-
-.contenido {
-    width: 960px;
-    margin: 0 auto;
-}
-
 .listad-noticias {
-    width: 700px;
+    width: 850px;
     float: left;
 }
 
 .noticia {
-    width: 210px;
+    width: 220px;
     display: inline-block;
     margin: 5px;
     cursor: pointer;
 }
 
 .cuerpo img {
-    width: 210px;
+    width: 220px;
     height: 300px;
 }
 
@@ -69,7 +21,7 @@ body {
 
 .listado-izquierdo {
     width: 220px;
-    float: right;
+    float: left;
 }
 
 .cabecera-listado {
@@ -87,6 +39,7 @@ body {
 }
 
 .tags ul li {
+    display: inline;
     padding: 2px 4px;
     background-color: steelblue;
     margin-right: 1px;
@@ -103,17 +56,6 @@ body {
 }
 
 
-.newsletter {
-    width: 960px;
-    background-color: #f2f4f5;
-    text-align: center;
-    padding-top: 30px;
-    padding-bottom: 30px;
-}
-
-.newsletter h2 {
-    font-size: 24px
-}
 
 .group input,
 .group button {
@@ -129,8 +71,3 @@ body {
     color: white;
 }
 
-.footer {
-    width: 960px;
-    margin: 0 auto;
-    text-align: center;
-}
