--- a/assets/sass/layout/_grid.scss
+++ b/assets/sass/layout/_grid.scss
@@ -1,8 +1,6 @@
 .container {
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 0.9375rem;
-    padding-right: 0.9375rem;
+margin: auto;
+width: 960px;
 }
 
 .row {
