--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -13,6 +13,8 @@
 @import 'layout/sidebar';
 @import 'layout/forms';
 @import 'layout/newsletter';
+@import 'layout/noticias';
+@import 'layout/aside';
 
 @import 'components/buttons';
 @import 'components/carousel';
