--- a/assets/sass/layout/_newsletter.scss
+++ b/assets/sass/layout/_newsletter.scss
@@ -1,5 +1,6 @@
 .newsletter {
     background-color: #f2f4f5;
+    width: 100vw;
     text-align: center;
     padding-top: 30px;
     padding-bottom: 30px;
@@ -8,3 +9,19 @@
         font-size: 24px;
     }
 }
+
+.group input,
+.group button {
+    display: inline-block;
+    border-width: 0;
+    font-size: 13px;
+    padding: 5px 10px;
+
+}
+
+.group button {
+    background-color: coral;
+    color: white;
+}
+
+
