--- a/assets/sass/layout/_navigation.scss
+++ b/assets/sass/layout/_navigation.scss
@@ -1,31 +1,32 @@
 .menu {
-     padding: 10px;
-     border-bottom: 1px solid gray;
+    padding: 10px;
+    border-bottom: 1px solid gray;
+    width: 100vw;
 
-     .input-menu {
-          border-radius: 30px;
-      }
- }
+    .menu__nav {
+        text-align: right;
+        float: right;
 
- .nav {
-     text-align: right;
-     float: right;
+        li {
+            list-style: none;
+            float: right;
+            margin-left: 5px;
+        }
 
-     li{
-          list-style: none;
-          float: right;
-          margin-left: 5px;
-     }
+        ul li a {
+            text-decoration: none;
+            text-transform: uppercase;
+        }
+    }
 
-     ul li a {
-          text-decoration: none;
-          text-transform: uppercase;
-      }
- }
+    .menu__nav--input-menu {
+        border-radius: 30px;
+    }
 
- .logo {
-     display: inline;
-     font-size: 24px;
-     font-weight: bold;
-     text-transform: uppercase;
- }
+    .menu__logo {
+        display: inline;
+        font-size: 24px;
+        font-weight: bold;
+        text-transform: uppercase;
+    }
+}
